created created structure and fetch API

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Hacker News</title>
   </head>
   <body>
-    <h1>Hi there!</h1>
+    <header>
+      <h1>Hi there!</h1>
+    </header>
+    <main>
+      <div class="main-container"></div>
+      <button id="loadMore" class="btn">Load more</button>
+    </main>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
