added some style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Hi there!</h1>
+      <h1>HACKER NEWS</h1>
     </header>
     <main>
       <div class="main-container"></div>
