--- a/index.html
+++ b/index.html
@@ -4,17 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Hacker News</title>
   </head>
   <body>
-    <header>
-      <h1>HACKER NEWS</h1>
+    <header class="colorful">
+      <h1>HACKER <br />NEWS</h1>
     </header>
     <main>
-      <div class="main-container"></div>
-      <button id="loadMore" class="btn">Load more</button>
+      <div class="main-container">
+        <div class="top-container">
+          <h2 class="colorful">TOP STORIES</h2>
+        </div>
+        <div class="news-container">
+          <div class="container">
+            <h2 class="colorful">LATEST NEWS</h2>
+          </div>
+          <button id="loadMore" class="btn">Load more</button>
+        </div>
+      </div>
     </main>
+    <template id="card">
+      <article class="news-card">
+        <h3 class="title"></h3>
+        <p class="author"></p>
+        <div class="footer">
+          <p class="link"></p>
+          <p class="date"></p>
+        </div>
+      </article>
+    </template>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
