--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <main>
       <div class="main-container">
         <div class="top-container">
-          <h2 class="colorful">TOP STORIES</h2>
+          <h2 class="colorful">TOP STORY</h2>
+          <div class="container"></div>
         </div>
         <div class="news-container">
           <div class="container">
@@ -32,8 +33,10 @@
     </main>
     <template id="card">
       <article class="news-card">
-        <h3 class="title"></h3>
-        <p class="author"></p>
+        <div class="content">
+          <h3 class="title"></h3>
+          <p class="author"></p>
+        </div>
         <div class="footer">
           <p class="link"></p>
           <p class="date"></p>
